Modified app index.html

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
 		<script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
