--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
     <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
+  </app-root>
 </body>
 </html>
