Added preloader spinner and made minor modifications to components

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <app-root>
-    <div class="spinner">
+     <div class="spinner loading-overlay">
       <div class="bounce1"></div>
       <div class="bounce2"></div>
       <div class="bounce3"></div>
